# OS-VIO

./: .gitignore  Makefile  README.md  config.json  ekf.py  pyproject.toml  reconstruct.py  record.py
benchmarks/: scorecard.json
scan/: hud_layout.json  reconstruction_metrics.json  session_telemetry.json
src/config/: config.json
src/slam/: __init__.py  cli.py
src/slam/dashboard/: __init__.py  client.py  server.py
src/slam/estimation/: state_estimator.py
src/slam/pipelines/: acquisition.py  benchmarking.py  reconstruction.py
src/slam/shared/: __init__.py  helpers.py  settings.py
