[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slam-underwater"
version = "0.1.0"
description = "Underwater SLAM/VIO pipeline for OAK-D hardware"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy==2.0.2",
  "opencv-contrib-python==4.10.0.84",
  "numba==0.60.0",
  "psutil==6.1.0",
]

[project.optional-dependencies]
laptop = ["open3d==0.18.0"]
pi = ["depthai==2.27.0.0", "aiohttp==3.10.10"]

[project.scripts]
slam-record = "slam.cli:record"
slam-reconstruct = "slam.cli:reconstruct"
slam-regression = "slam.cli:regression"
slam-regression-score = "slam.cli:regression_score"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["slam*"]
